# bm280-weatherapp-rust

./: Cargo.toml  README.md  db.sqlite
html/: index.html
install/: install.sh  weather-ingest.service  weather-webapp.service
src/: ingestion.rs  lib.rs  webservice.rs
