[package]
name = "weatherapp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ingestor"
path = "src/ingestion.rs"

[[bin]]
name = "webservice"
path = "src/webservice.rs"

[dependencies]
bme280 = "0.5.1"
linux-embedded-hal = { version = "0.4.0", features = ["gpio_cdev"] }
rusqlite = "0.31.0"
serde = { version = "1.0", default-features = true}
serde_json = { version = "1.0", default-features = true}
now = { version = "0.1.3" }
chrono = "0.4.38"


[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]
